fix(csp): replace Google Fonts with self-hosted packages
- Add @fontsource packages for Bricolage Grotesque, DM Sans, and Fredoka
- Update CSP to allow custom Clerk domain (clerk.tipkoro.com)
- Remove external font imports from CSS files in favor of local packages
- Update package-lock.json with new font dependencies

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.58.1",
+    "@fontsource/bricolage-grotesque": "^5.2.10",
+    "@fontsource/dm-sans": "^5.2.8",
+    "@fontsource/fredoka": "^5.2.10",
     "@hookform/resolvers": "^5.2.2",
     "@monaco-editor/react": "^4.7.0",
     "@prisma/client": "^7.1.0",
