--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
                 { "key": "Permissions-Policy", "value": "camera=(), microphone=(), geolocation=()" },
                 {
                     "key": "Content-Security-Policy",
-                    "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.clerk.accounts.dev https://challenges.cloudflare.com https://*.supabase.co https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https:; font-src 'self' data:; connect-src 'self' https://*.supabase.co wss://*.supabase.co https://*.clerk.accounts.dev https://*.clerk.dev https://api.resend.com https://*.rupantor.com; frame-src https://*.clerk.accounts.dev https://challenges.cloudflare.com https://*.rupantor.com; frame-ancestors 'self';"
+                    "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://clerk.tipkoro.com https://*.clerk.accounts.dev https://*.clerk.com https://challenges.cloudflare.com https://*.supabase.co https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https:; font-src 'self' data:; connect-src 'self' https://*.supabase.co wss://*.supabase.co https://clerk.tipkoro.com https://*.clerk.accounts.dev https://*.clerk.dev https://*.clerk.com https://api.resend.com https://*.rupantor.com; frame-src https://clerk.tipkoro.com https://*.clerk.accounts.dev https://*.clerk.com https://challenges.cloudflare.com https://*.rupantor.com; frame-ancestors 'self';"
                 }
             ]
         }
