--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "embla-carousel-react": "^8.6.0",
     "html-to-image": "^1.11.13",
     "input-otp": "^1.4.2",
+    "liquid-glass-react": "^1.1.1",
     "lucide-react": "^0.556.0",
     "nanoid": "^5.1.6",
     "next-themes": "^0.4.6",
