--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lucide-react": "^0.556.0",
     "nanoid": "^5.1.6",
     "next-themes": "^0.4.6",
+    "playwright": "^1.58.2",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.2",
     "react-day-picker": "^9.12.0",
